--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,10 @@ a {
   transition: transform 1s, opacity 1s, -webkit-transform 1s;
 }
 
+._lock {
+  overflow: hidden;
+}
+
 .header {
   padding-top: 66px;
   font-size: 16px;
@@ -871,11 +875,48 @@ a {
   .header {
     padding-top: 25px;
   }
+  .header .navigation {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 0 auto;
+  }
+  .header .navigation__item {
+    margin: 0;
+    margin-bottom: 35px;
+  }
+  .header .navigation__item-login {
+    border: none;
+    padding: 0;
+  }
+  .header .navigation__link {
+    font-size: 24px;
+  }
   .nav {
     display: none;
+    position: fixed;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    padding: 30px;
+    padding-top: 100px;
+    -webkit-transition: top 0.3s ease 0s;
+    transition: top 0.3s ease 0s;
+    overflow: auto;
+  }
+  .visible {
+    display: block;
+    top: 0;
+    -webkit-transition: top 0.3s ease 0s;
+    transition: top 0.3s ease 0s;
   }
   .header__burger {
     display: block;
+  }
+  .nav_hidden {
+    display: none;
   }
 }
 
