--- a/css/style.scss
+++ b/css/style.scss
@@ -74,6 +74,17 @@ a{
     transition: transform 1s, opacity 1s;
 }
 
+
+
+// .nav_hidden {
+//     display: block;
+//     transition: top 0.3s ease 0s;
+// }
+
+._lock {
+    overflow: hidden;
+}
+
 // === /common ===
 
 
@@ -828,14 +839,54 @@ a{
 
         .header{
             padding-top: 25px;
+
+            .navigation {
+                flex-direction: column;
+                margin: 0 auto;
+
+                &__item {
+                    margin: 0;
+                    margin-bottom: 35px;
+                }
+    
+                &__item-login {
+                    border: none;
+                    padding: 0;
+                }
+    
+                &__link {
+                    font-size: 24px;
+                    
+                }
+            }
         }
 
         .nav{
             display: none;
+
+            position: fixed;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba($color: #000, $alpha: 0.9);
+            padding: 30px;
+            padding-top: 100px;
+            transition: top 0.3s ease 0s;
+            overflow: auto;
         }
-        
+
+        .visible {
+            display: block;
+            top: 0;
+            transition: top 0.3s ease 0s;
+        }
+ 
         .header__burger{
             display: block;
+        }
+
+        .nav_hidden {
+            display: none;
         }
     }
 
